--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,25 +1,53 @@
-name: Build and Push Docker Image
+name: Release – Build & Push Docker Image
 
 on:
   release:
-    types:
-      - created
+    types: [created]
 
 env:
   IMAGE_NAME: linkshelf
-  IMAGE_TAG: ${{ github.event.release.tag_name }} # eg. v0.0.1
-  GH_USERNAME: fermionhq
+  IMAGE_TAG: ${{ github.event.release.tag_name }}
+  REGISTRY: ghcr.io
+  OWNER: ${{ github.repository_owner }}
 
 jobs:
-  build-and-publish:
+  build-and-push:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - uses: actions/checkout@v6.0.1
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build image
-        run: docker build . --file ./.docker/Dockerfile --tag $IMAGE_NAME --label $IMAGE_TAG --build-arg IMAGE_NAME=$IMAGE_NAME --build-arg IMAGE_TAG=$IMAGE_TAG
-      - name: Log in to registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-      - name: Add tag to image
-        run: docker tag $IMAGE_NAME ghcr.io/$GH_USERNAME/$IMAGE_NAME:$IMAGE_TAG
-      - name: Push image to container-registry
-        run: docker push ghcr.io/$GH_USERNAME/$IMAGE_NAME:$IMAGE_TAG
+        run: |
+          docker build \
+            -f .docker/Containerfile \
+            -t $IMAGE_NAME \
+            --build-arg IMAGE_NAME=$IMAGE_NAME \
+            --build-arg IMAGE_TAG=$IMAGE_TAG \
+            --label org.opencontainers.image.version=$IMAGE_TAG \
+            .
+
+      - name: Tag image
+        run: |
+          docker tag \
+            $IMAGE_NAME \
+            $REGISTRY/$OWNER/$IMAGE_NAME:$IMAGE_TAG
+
+      - name: Push image
+        run: |
+          docker push $REGISTRY/$OWNER/$IMAGE_NAME:$IMAGE_TAG
