--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,17 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/backend" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "frontend"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: ".docker"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "go"
+    directory: "backend"
+    schedule:
+      interval: "daily"
