--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,12 +10,22 @@ updates:
     schedule:
       interval: "daily"
 
+  - package-ecosystem: "gomod"
+    directory: "backend"
+    schedule:
+      interval: "daily"
+
   - package-ecosystem: "docker"
     directory: ".docker"
     schedule:
       interval: "daily"
 
-  - package-ecosystem: "go"
-    directory: "backend"
+  - package-ecosystem: "docker-compose"
+    directory: ""
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: ".github/workflows"
     schedule:
       interval: "daily"
