--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,10 +30,17 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: '1.25'
+          cache: true
 
-      - name: Run Go tests
+      - name: Run unit tests
         working-directory: backend
-        run: go test ./...
+        run: |
+          go test ./...
+
+      - name: Run integration tests
+        working-directory: backend
+        run: |
+          go test -tags=integration ./...
 
       - name: Build Docker image (no push)
         run: |
