--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,10 +76,15 @@ jobs:
         with:
           go-version: '1.25'
 
-      - name: Run tests with coverage
+      - name: Run unit tests
         working-directory: backend
         run: |
           go test ./... -coverprofile=coverage.out
+
+      - name: Run integration tests
+        working-directory: backend
+        run: |
+          go test -tags=integration ./... -coverprofile=coverage.out
 
       - name: Generate coverage badge
         uses: tj-actions/coverage-badge-go@v3
