--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI – Test & Build Image
+name: CI – Build, Test & Coverage
 
 on:
   push:
@@ -19,7 +19,7 @@ env:
   IMAGE_NAME: linkshelf
 
 jobs:
-  test-and-build:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,17 +32,41 @@ jobs:
           go-version: '1.25'
           cache: true
 
+      - name: Go version
+        run: go version
+
+      - name: Build
+        working-directory: backend
+        run: |
+          go build ./...
+
+      - name: Verify go generate is up-to-date
+        working-directory: backend
+        run: |
+          go generate ./...
+          git diff --exit-code
+
       - name: Run unit tests
         working-directory: backend
         run: |
-          go test ./...
+          go test ./... -coverprofile=coverage.unit.out
 
       - name: Run integration tests
         working-directory: backend
         run: |
-          go test -tags=integration ./...
+          go test -tags=integration ./... -coverprofile=coverage.integration.out
 
-      - name: Build Docker image (no push)
+      - name: Coverage summary
+        working-directory: backend
+        run: |
+          go tool cover -func=coverage.unit.out > coverage.txt
+          go tool cover -func=coverage.integration.out >> coverage.txt
+          echo "-------------------------------"
+          echo "TOTAL COVERAGE:"
+          grep total: coverage.txt
+          echo "-------------------------------"
+
+      - name: Build Docker image
         run: |
           docker build \
             -f .docker/Containerfile \
