--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,71 +22,14 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: '1.25'
-          cache: true
-
-      - name: Go version
-        run: go version
-
-      - name: Build
-        working-directory: backend
-        run: |
-          go build ./...
-
-      - name: Install mockgen
-        run: |
-          go install go.uber.org/mock/mockgen@latest
-
-      - name: Verify go generate is up-to-date
-        working-directory: backend
-        run: |
-          go generate ./...
-          git diff --exit-code
-
-      - name: Run unit tests
-        working-directory: backend
-        run: |
-          go test ./... -coverprofile=coverage.unit.out
-
-      - name: Run integration tests
-        working-directory: backend
-        run: |
-          go test -tags=integration ./... -coverprofile=coverage.integration.out
-
-      - name: Coverage summary
-        working-directory: backend
-        run: |
-          go tool cover -func=coverage.unit.out > coverage.txt
-          go tool cover -func=coverage.integration.out >> coverage.txt
-          echo "-------------------------------"
-          echo "TOTAL COVERAGE:"
-          grep total: coverage.txt
-          echo "-------------------------------"
-
-      - name: Build Docker image
-        run: |
-          docker build \
-            -f .docker/Containerfile \
-            -t $IMAGE_NAME:ci \
-            .
-
-
-  test-and-coverage:
-    runs-on: ubuntu-latest
-
     permissions:
       contents: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v6
@@ -94,14 +37,14 @@ jobs:
           go-version: '1.25'
           cache: true
 
+      - name: Install mockgen
+        run: |
+          go install go.uber.org/mock/mockgen@latest
+
       - name: Build
         working-directory: backend
         run: |
           go build ./...
-
-      - name: Install mockgen
-        run: |
-          go install go.uber.org/mock/mockgen@latest
 
       - name: Verify go generate is up-to-date
         working-directory: backend
@@ -119,12 +62,11 @@ jobs:
         run: |
           go test -tags=integration ./... -coverprofile=coverage.integration.out
 
-      - name: Merge coverage profiles
+      - name: Merge coverage
         working-directory: backend
         run: |
           echo "mode: atomic" > coverage.out
           grep -h -v "^mode:" coverage.unit.out coverage.integration.out >> coverage.out
-
 
       - name: Coverage summary
         working-directory: backend
@@ -134,13 +76,21 @@ jobs:
           echo "-------------------------------"
           grep total: coverage.txt
 
+      - name: Checkout current branch
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+        run: |
+          git fetch origin
+          git checkout ${{ github.ref_name }}
+
       - name: Generate coverage badge
         uses: tj-actions/coverage-badge-go@v3
         with:
           filename: backend/coverage.out
 
       - name: Commit coverage badge
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         uses: EndBug/add-and-commit@v9
         with:
-          message: "chore: update coverage badge (release ${{ github.event.release.tag_name }})"
-          add: "README.md"
+          message: "chore: update coverage badge"
+          add: README.md
+          push: true
