--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,12 +55,26 @@ jobs:
       - name: Run unit tests
         working-directory: backend
         run: |
-          go test ./...
+          go test ./... -coverprofile=coverage.unit.out
 
       - name: Run integration tests
         working-directory: backend
         run: |
-          go test -tags=integration ./...
+          go test -tags=integration ./... -coverprofile=coverage.integration.out
+
+      - name: Merge coverage
+        working-directory: backend
+        run: |
+          echo "mode: atomic" > coverage.out
+          grep -h -v "^mode:" coverage.unit.out coverage.integration.out >> coverage.out
+
+      - name: Coverage summary
+        working-directory: backend
+        run: |
+          echo "-------------------------------"
+          go tool cover -func=coverage.out | tee coverage.txt
+          echo "-------------------------------"
+          grep total: coverage.txt
 
       - name: check test coverage
         uses: vladopajic/go-test-coverage@v2
