--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,38 +45,38 @@ jobs:
       - name: Run unit tests
         working-directory: backend
         run: |
-          go test ./... -coverprofile=coverage.unit.out
+          PKGS=$(go list ./... | grep -v '/mocks')
+          go test $PKGS -coverprofile=coverage.unit.out
 
       - name: Run integration tests
         working-directory: backend
         run: |
-          go test -tags=integration ./... -coverprofile=coverage.integration.out
+          PKGS=$(go list ./... | grep -v '/mocks')
+          go test -tags=integration $PKGS -coverprofile=coverage.integration.out
 
-      - name: Merge coverage profiles
+      - name: Merge coverage
         working-directory: backend
         run: |
-          echo "mode: atomic" > coverage.out
-          grep -h -v "^mode:" coverage.unit.out coverage.integration.out >> coverage.out
-
+          echo "mode: atomic" > ../coverage.out
+          grep -h -v "^mode:" coverage.unit.out coverage.integration.out >> ../coverage.out
 
       - name: Coverage summary
         working-directory: backend
         run: |
           echo "-------------------------------"
-          go tool cover -func=coverage.out | tee coverage.txt
+          go tool cover -func=../coverage.out | tee coverage.txt
           echo "-------------------------------"
           grep total: coverage.txt
 
-      - name: Generate coverage badge
-        uses: tj-actions/coverage-badge-go@v3
+      - name: check test coverage
+        uses: vladopajic/go-test-coverage@v2
         with:
-          filename: backend/coverage.out
+          profile: coverage.out
+          threshold-total: 0
+          debug: true
 
-      - name: Commit coverage badge
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore: update coverage badge (release ${{ github.event.release.tag_name }})"
-          add: "README.md"
+          git-token: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.GITHUB_TOKEN || '' }}
+          git-branch: ${{ github.ref_name }}
 
   build-and-push:
     needs: test-and-coverage
