--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 frontend/.idea
-frontend/.nuxt
 frontend/node_modules
 frontend/.gitignore
+frontend/.output
 frontend/.data
+frontend/.nuxt
+frontend/.nitro
+frontend/.cache
+frontend/dist
+frontend/logs
+frontend/*.log
+frontend/.DS_Store
+frontend/.env
+frontend/.env.*
+!frontend/.env.example
+
 
 backend/.idea
 .idea
