--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,17 @@
     "@nuxt/ui": "^4.3.0",
     "@nuxtjs/i18n": "10.2.1",
     "@nuxtjs/mdc": "0.19.2",
+    "@pinia/nuxt": "0.11.3",
     "better-sqlite3": "^12.5.0",
-    "nuxt": "^4.2.2"
+    "nuxt": "^4.2.2",
+    "pinia": "^3.0.4",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
-    "@openapitools/openapi-generator-cli": "^2.26.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.3.0",
+    "@openapitools/openapi-generator-cli": "^2.26.0",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
     "vue": "^3.5.26",
